girsa of second branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>smile!!!!!</h1>
+    <h1 style="color:blue;">smile!!!!!</h1>
 </body>
 </html>
