girsa of firs branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>smile!!!!!</h1>
+    <h1 style="color: red;">smile!!!!!</h1>
+    <p>abaa we love you</p>
 </body>
 </html>
